log
Thu 16 May 2024 12:44:42 AM UTC: 
 tests:  0|5
total_score: 0/70
a6ef129
Thu 16 May 2024 12:59:10 AM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  2|4
total_score: 15/70
dd84b3b
Thu 16 May 2024 01:02:52 AM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
326a320
Thu 16 May 2024 01:09:19 AM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  3|3
total_score: 25/70
8c98edc
Thu 16 May 2024 01:11:53 AM UTC: 
 sudoku.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 30/70
200f5e4
Thu 16 May 2024 01:12:12 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
263c59a
Thu 16 May 2024 01:12:19 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:103:11: error: ‘n’ undeclared (first use in this function)
  103 |    return n;
      |           ^
sudoku.c:103:11: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:104:1: error: control reaches end of non-void function [-Werror=return-type]
  104 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
005fb73
Thu 16 May 2024 01:12:26 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
b92eb70
Thu 16 May 2024 01:13:58 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
a32c420
Thu 16 May 2024 01:16:03 AM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:99:26: error: passing argument 1 of ‘next’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   99 |          adj_node = next(adj_node);
      |                          ^~~~~~~~
      |                          |
      |                          Node *
In file included from test.c:4:
list.h:17:18: note: expected ‘List *’ but argument is of type ‘Node *’
   17 | void* next(List* list);
      |            ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
5d60f0a
